# rust-embedded-poc

./: .gitignore  Cargo.toml  LICENSE  README.md  memory.x
src/: main.rs
