[package]
name = "rust-embedded-poc"
version = "0.1.0"
authors = ["Gui-Yom <memorial.limelion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "^0.6.2"
cortex-m-rt = { version = "^0.6.12", features = ["device"] }
panic-halt = "^0.2.0"
atsam3x8e = { path = "../atsam3x8e", features = ["rt"] }

[profile.release]
lto = true
opt-level = "s"
